<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.crypticsocket.hoggers.Main4Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/become_a_hogger"
        android:textColor="#212121"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#d50000"
        android:text=""
        android:id="@+id/t2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/lightGray"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/userSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/email_id"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passCheckSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            tools:ignore="HardcodedText" />

    </LinearLayout>
    <Button
        android:layout_marginTop="20dp"

        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/but1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/button_shape"
        android:onClick="signUpNow"
        android:text="@string/sign_up"
        android:visibility="visible"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NOTE : If email ID entered is not valid, account will not be created"
        android:textColor="#c62828"
        android:gravity="center"
        android:layout_marginTop="5dp"/>

</LinearLayout>
